--- a/ContactBoxApp/templates/ContactBox/home.html
+++ b/ContactBoxApp/templates/ContactBox/home.html
@@ -4,5 +4,22 @@
 
 {% block content %}
     <br/>
-    <p class="text-danger">Hello</p>
+    <table class="table table-striped table-bordered">
+        <thead class="lead">
+            <th>Nazwisko</th>
+            <th>Imię</th>
+            <th>Modyfikuj</th>
+            <th>Usuń</th>
+        </thead>
+    <tbody>
+    {% for person in persons %}
+        <tr>
+            <td>{{ person.surname }}</td>
+            <td>{{ person.name }}</td>
+            <td>modyfikuj</td>
+            <td>usuń</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
 {% endblock %}
