--- a/ContactBoxApp/templates/ContactBox/home.html
+++ b/ContactBoxApp/templates/ContactBox/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <br/>
-    <table class="table table-striped table-bordered">
+    <table class="table table-dark table-striped table-bordered">
         <thead class="lead">
             <th>Nazwisko</th>
             <th>Imię</th>
@@ -16,8 +16,8 @@
         <tr>
             <td>{{ person.surname }}</td>
             <td>{{ person.name }}</td>
-            <td>modyfikuj</td>
-            <td>usuń</td>
+            <td><button class="btn btn-warning">modyfikuj</button></td>
+            <td><button class="btn btn-danger">usuń</button></td>
         </tr>
     {% endfor %}
     </tbody>
