--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body class="bg-dark" text-light>
+<body class="bg-dark text-light" >
     <div class="container">
-        <nav class="navbar navbar-expand-sm bg-info navbar-light">
+        <nav class="navbar-expand-sm bg-secondary navbar-light">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link lead text-dark" href="{% url 'contactbox:home' %}">HOME </a>
+                    <a class="nav-link" href="{% url 'contactbox:home' %}">
+                        <button class="btn btn-dark">HOME </button></a>
                 </li>
             </ul>
         </nav>
