--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -11,10 +11,15 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contactbox:home' %}">
-                        <button class="btn btn-dark">HOME </button></a>
+                        <button class="btn btn-dark">HOME</button></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contactbox:new' %}">
+                        <button class="btn btn-dark">NOWY KONTAKT</button></a>
                 </li>
             </ul>
         </nav>
+    <br/>
 
         {% block content %}
         {% endblock %}
