--- a/ContactBoxApp/templates/ContactBox/show.html
+++ b/ContactBoxApp/templates/ContactBox/show.html
@@ -3,8 +3,32 @@
 {% block title %}{{ person.name }}{{ person.surname }} details{% endblock %}
 
 {% block content %}
-    Imię: {{ person.name }}
-    Nazwisko: {{ person.surname }}
-    Opis: {{ person.description }}
-    Adres: {{ person.address.city }}
+    <table class="table table-dark table-bordered">
+        <thead class="lead">
+            <th>IMIĘ</th>
+            <th>NAZWISKO</th>
+            <th>OPIS</th>
+            <th>ADRES</th>
+            <th>TELEFON</th>
+            <th>MAIL</th>
+            <th>GRUPY</th>
+        </thead>
+        <tbody>
+
+            <tr>
+                <td>{{ person.name }}</td>
+                <td>{{ person.surname }}</td>
+                <td>{{ person.description }}</td>
+                <td>{{ person.address.city }}, <br/>
+                    ul. {{ person.address.street }} {{ person.address.house_nr }}
+                    {% if person.address.flat_nr %}/{{ person.address.flat_nr }}
+                    {% endif %}
+                </td>
+                <td></td>
+
+            </tr>
+        </tbody>
+    </table>
+
+    </table>
 {% endblock %}
