--- a/ContactBoxApp/templates/ContactBox/home.html
+++ b/ContactBoxApp/templates/ContactBox/home.html
@@ -14,7 +14,7 @@
     <tbody>
     {% for person in persons %}
         <tr>
-            <td><a href="{% url 'contactbox:person' person.id %}">{{ person.surname }}</a></td>
+            <td><a class="text-light" href="{% url 'contactbox:person' person.id %}">{{ person.surname }}</a></td>
             <td><a class="text-light" href="{% url 'contactbox:person' person.id %}">{{ person.name }}</a></td>
             <td><button class="btn btn-warning">modyfikuj</button></td>
             <td><button class="btn btn-danger">usuń</button></td>
