--- a/ContactBoxApp/templates/ContactBox/new.html
+++ b/ContactBoxApp/templates/ContactBox/new.html
@@ -7,10 +7,11 @@
         <form method="post" action="#">
         {% csrf_token %}
             <div class="float-left mr-4">
-                <label><span class="lead">DANE OSOBOWE:</span>
-                <table class="table table-dark table-striped table-bordered">
-                    {{ form.as_table }}
-                </table>
+            <label><span class="lead">DANE OSOBOWE:</span><br/>
+            <span class="text-warning">*wypełnij przynajmniej jedno z pól imię, nazwisko</span>
+            <table class="table table-dark table-striped table-bordered">
+                {{ form.as_table }}
+            </table>
             </label>
             </div>
             <div class="float-left">
@@ -20,14 +21,14 @@
                     {{ form2.as_table }}
                 </table>
             </label>
-            <br/>
+                <br/>
             <label><span class="lead">GRUPY:</span><br/>
-            <span class="text-warning">*wypełnij jeśli chcesz dodać nową grupę</span>
                 <table class="table table-dark table-striped table-bordered">
                     {{ form5.as_table }}
                 </table>
             </label>
             </div>
+            <br/>
             <div class="clearfix"></div>
             <br/>
             <label><span class="lead">TELEFON:</span><br/>
