--- a/ContactBoxApp/templates/ContactBox/show.html
+++ b/ContactBoxApp/templates/ContactBox/show.html
@@ -16,8 +16,8 @@
         <tbody>
 
             <tr>
-                <td>{{ person.name }}</td>
-                <td>{{ person.surname }}</td>
+                <td>{{ person.first }}</td>
+                <td>{{ person.last }}</td>
                 <td>{{ person.description }}</td>
                 <td>{% if person.address.city %}
                     {{ person.address.city }}, <br/>
@@ -36,8 +36,8 @@
                     {{ mail.email }} - {{ mail.get_type_display }} <br/>
                     {% endfor %}
                 </td>
-                <td>{% for group in person.groups_set.all %}
-                    {{ group.name }} <br/>
+                <td>{% for group in person.groups.all %}
+                    {{ group.groupname }} <br/>
                     {% endfor %}
                 </td>
 
@@ -45,5 +45,17 @@
         </tbody>
     </table>
 
-    </table>
+    <div class="float-left">
+        {% if prev %}
+        <a href="{% url 'contactbox:person' prev %}"><button class="btn btn-info">Previous</button></a>
+        {% else %}
+        <button class="btn btn-danger">Last</button>
+        {% endif %}
+
+        {% if next %}
+        <a href="{% url 'contactbox:person' next %}"><button class="btn btn-info">Next</button></a>
+        {% else %}
+        <button class="btn btn-danger">Last</button>
+        {% endif %}
+    </div>
 {% endblock %}
