--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -17,6 +17,10 @@
                     <a class="nav-link" href="{% url 'contactbox:new' %}">
                         <button class="btn btn-dark">NOWY KONTAKT</button></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contactbox:new_group' %}">
+                        <button class="btn btn-dark">NOWA GRUPA</button></a>
+                </li>
             </ul>
         </nav>
         <br/>
