--- a/ContactBoxApp/templates/ContactBox/home.html
+++ b/ContactBoxApp/templates/ContactBox/home.html
@@ -33,7 +33,7 @@
 
         {% for i in persons.paginator.page_range %}
         {% if persons.number == i %}
-            <li class="page-item active"><span class="page-link bg-light text-dark">{{ i }} <span class="sr-only">(current)</span></span></li>
+            <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
         {% else %}
             <li class="page-item"><a class="page-link bg-dark text-light" href="?page={{ i }}">{{ i }}</a></li>
         {% endif %}
