--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -18,8 +18,8 @@
                         <button class="btn btn-dark">NOWY KONTAKT</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contactbox:new_group' %}">
-                        <button class="btn btn-dark">NOWA GRUPA</button></a>
+                    <a class="nav-link" href="{% url 'contactbox:groups' %}">
+                        <button class="btn btn-dark">GRUPY</button></a>
                 </li>
             </ul>
         </nav>
