--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="mb-5 bg-dark text-light" >
@@ -11,7 +12,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contactbox:home' %}">
-                        <button class="btn btn-dark">HOME</button></a>
+                        <button class="btn btn-dark">KONTAKTY</button></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contactbox:new' %}">
