add back buttons to groups, new and show templates

--- a/ContactBoxApp/templates/ContactBox/groups.html
+++ b/ContactBoxApp/templates/ContactBox/groups.html
@@ -41,7 +41,10 @@
         </table>
         </label>
         <br/>
-        <input type="submit" name="add" value="Dodaj grupę" class="btn btn-success">
+        <input type="submit" name="add" value="Dodaj grupę" class="btn btn-success mr-5">
     </form>
+    <br/>
+    <a href="{% url 'contactbox:home' %}"><button class="btn btn-info">Wróć</button></a>
+
 
     {% endblock %}
