--- a/ContactBoxApp/templates/ContactBox/new.html
+++ b/ContactBoxApp/templates/ContactBox/new.html
@@ -43,7 +43,8 @@
                 </table>
             </label>
             <br/>
-            <input type="submit" name="add" value="Dodaj kontakt" class="btn btn-success">
+            <input type="submit" name="add" value="Dodaj kontakt" class="btn btn-success mr-5">
+            <a href="{% url 'contactbox:home' %}"><button class="btn btn-info mr-5">Wróć</button></a>
         </form>
 
     {% endblock %}
