--- a/ContactBoxApp/templates/ContactBox/show.html
+++ b/ContactBoxApp/templates/ContactBox/show.html
@@ -58,6 +58,7 @@
         {% endif %}
     </div>
     <div class="float-right">
+        <a href="{% url 'contactbox:home' %}"><button class="btn btn-info mr-5">Wróć</button></a>
         <a href="{% url 'contactbox:modify' person.id %}"><button class="btn btn-warning mr-5">modyfikuj</button></a>
         <a href="{% url 'contactbox:delete' person.id %}"><button class="btn btn-danger">usuń</button></a>
     </div>
