--- a/ContactBoxApp/templates/ContactBox/modify.html
+++ b/ContactBoxApp/templates/ContactBox/modify.html
@@ -35,7 +35,7 @@
 
         <label><span class="lead">EMAIL:</span><br/>
             <table class="table table-dark table-striped table-bordered">
-                {{ form4.as_table }}
+                {{ form4 }}
             </table>
         </label>
 
