add url, view and link button for searching

--- a/ContactBoxApp/templates/ContactBox/home.html
+++ b/ContactBoxApp/templates/ContactBox/home.html
@@ -49,5 +49,6 @@
     <br/>
 
     <a href="{% url 'contactbox:new' %}"><button class="btn btn-success">Nowy kontakt</button></a>
+    <a href="{% url 'contactbox:search' %}"><button class="btn btn-warning">Wyszukaj</button></a>
 
 {% endblock %}
