--- a/ContactBoxApp/templates/ContactBox/base.html
+++ b/ContactBoxApp/templates/ContactBox/base.html
@@ -22,6 +22,10 @@
                     <a class="nav-link" href="{% url 'contactbox:groups' %}">
                         <button class="btn btn-dark">GRUPY</button></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contactbox:search' %}">
+                        <button class="btn btn-dark">WYSZUKAJ</button></a>
+                </li>
             </ul>
         </nav>
         <br/>
